Fix the issue with active tabs having a higher z-index than the top bar

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -791,6 +791,7 @@ a.card:hover {
   margin-top: -1px;
   padding: 3rem 2rem;
   width: 100%;
+  z-index: 100;
 }
 
 .tab {
@@ -814,7 +815,7 @@ a.card:hover {
   &.active {
     color: $black;
     border-bottom: 1px solid $white;
-    z-index: 9999;
+    z-index: 101;
 
     &:hover {
       background-color: $white;
